--- a/ccs/style.css
+++ b/ccs/style.css
@@ -1,15 +1,291 @@
-* {
+
+body {
     margin: 0;
-    padding: 0;
+    background: rgb(231, 231, 245);
 }
 
-nav {
-    display: inline-block;
+/* navigasi bar */
+.navbar{ 
+    width : 100% ;
+    height : auto;
+    border : 1px hidden;
+    display: flex;
     justify-content: space-between;
+    position: fixed;
+    top : 0;
+    z-index: 1;
+    align-items: center;
+    background: linear-gradient(90deg, rgb(6, 2, 88) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
 }
 
-h5 {
+.logo {
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    padding: 15px;
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.toko {
+    font-family: "Dancing Script", cursive;
+    font-optical-sizing: auto;
+    font-style: normal;
+    color: white;
+ 
+}
+
+
+.menu {
+    margin-right: 50px;
+}
+
+.menu a{
+    padding: 5px 50px;
+    border: 1px solid white;
+    border-radius: 5px;
+    text-decoration: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+    font-weight: bold;
+    margin-right: 15px;
+    font-size: small;
+}
+   
+
+/* semua halaman section */
+section {
+    margin: 0 50px 0 50px;
+}
+
+/* Halaman Home Banner */
+#home {
+    margin: 0 50px;
+}
+
+.home{
+    position: relative;
+    top: 100px;
+    padding-bottom: 60px;
+}
+
+.welcome {
+    font-family: Georgia;
+    font-size : 2vw;
+    margin-bottom: 70px;
+}
+
+
+.banner-container{
+    width: 100% ;
+    height: auto;
+    border: 1px solid black;
+}
+
+.subjudul {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 50px;
+    margin-bottom: 30px;
+}
+
+/* About Us */
+.profile-icon {
+    width: 300px ;
+    height: auto;
+    border: 1px solid black;
+    border-radius: 50%;
+}
+
+article{
+    display: flex;
+    justify-content: space-evenly;
+   
+}
+
+.profile {
+    text-align: center;
+    padding: 5px;
+}
+
+h4, h6 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    
+}
+
+h6 a {
+    text-decoration: none;
+    color: rgb(63, 62, 62);
+}
+
+p {
+    font-family: Georgia;
+    font-size: 1.1vw;
+}
+
+/* Product */
+.card {
+    width: 35%;
+    height: auto;
+    border: 1px hidden;
     display: inline-block;
-    border : 1;
-    border-color: black;
+    margin: 5px 10px;
+    padding: 5px; 
+    overflow: hidden;
+    text-align: center;
+  }
+
+.cimg {
+    width: 100%;
+    height: auto;
+    border: 1px hidden;
+    border-radius: 10%;
+}
+
+/* message us */
+
+.message {
+    display: flex;
+    margin-left: 10px; 
+}
+
+form {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.pesan {
+    width : 400px;
+    height : 170px ;
+    border: 1px solid black;
+}
+
+
+.isi {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 12px;
+    padding-top : 10px;
+    padding-left : 30px;
+
+} 
+
+/* footer */
+footer {
+    width: 100%;
+    height: 50px;
+    background: linear-gradient(90deg, rgb(6, 2, 88) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    text-align: center;
+    color: white;
+    padding : 5px;
+    margin: 15px 0 0 0;
+    font-family: Georgia;
+}
+
+ @media only screen and (max-width: 600px){
+ /*responsive navbar  */
+    .navbar {
+        flex-direction: column;
+        height: 270px;
+        
+    }
+
+    .logo {
+        width: 55px;
+        height: 55px;
+        border-radius: 50%;
+        padding: 5px;
+        margin-left: 5px;
+        display: block;
+        align-items: center;
+    }
+    
+    .toko {
+        font-family: "Dancing Script", cursive;
+        font-optical-sizing: auto;
+        font-style: normal;
+        color: white;
+        margin-top: 5px;
+        margin-left: -45px;
+    }
+    .menu a{
+        display: block;
+        width: 100%;
+        height: auto;
+        text-align: center;
+        margin-bottom: 10px;
+        margin-left: -20px;
+    }
+
+/*responsive home banner  */
+.welcome {
+    font-family: Georgia;
+    font-size : 3.5vw;
+    margin-top: 200px;  
+}
+
+.subjudul {
+    text-align: center;
+}
+/* responsive About Us */
+.profile-icon {
+    width: 150px ;
+    height: auto;
+    border: 1px solid black;
+    border-radius: 50%;
+}
+
+article{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+   
+}
+
+.profile {
+    text-align: center;
+    padding: 5px;
+}
+
+h4 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+p {
+    font-family: Georgia;
+    font-size: 2.5vw;
+    text-align: center;
+}
+
+/* responsiveProduct */
+.card {
+    width: 50%;
+    height: auto;
+    border: 1px hidden;
+    display: inline-block;
+    margin: 25px 90px;
+    padding: 5px; 
+    overflow: hidden;
+    text-align: center;
+  }
+
+.cimg {
+    width: 100%;
+    height: auto;
+    border: 1px hidden;
+    border-radius: 10%;
+}
+
+/* message us */
+
+form {
+    margin-bottom: 20px;    
+    font-size: 12px;
+}
+
+.isi{
+    font-size: 12px;
+}
 }
